# arc_engine

./: CMakeCache.txt  CMakeLists.txt
Debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
Debug/engine/: Makefile  cmake_install.cmake
Debug/engine/core/: Makefile  cmake_install.cmake
Debug/engine/core/platform/linux/: Makefile  cmake_install.cmake
Debug/engine/imgui/: Makefile  cmake_install.cmake
Debug/engine/log/: Makefile  cmake_install.cmake
Debug/engine/renderer/: Makefile  cmake_install.cmake
Debug/engine/renderer/platform/opengl/: Makefile  cmake_install.cmake
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/include/: core.h  engine.h  event_handler.h  window.h
engine/core/platform/android/: CMakeLists.txt
engine/core/platform/android/include/: platform_window.h
engine/core/platform/android/src/: platform_input.cpp  platform_window.cpp
engine/core/platform/linux/: CMakeLists.txt
engine/core/platform/linux/include/: platform_window.h
engine/core/platform/linux/src/: platform_window.cpp
engine/core/platform/linuxsdl/: CMakeLists.txt
engine/core/platform/linuxsdl/include/: platform_input.h
engine/core/platform/linuxsdl/src/: platform_input.cpp  platform_window.cpp
engine/core/src/: engine.cpp  window.cpp
engine/imgui/include/: imgui_layer.h
engine/imgui/src/: imgui_layer.cpp
engine/include/: engine_includes.h
engine/log/include/: log.h
engine/log/src/: log.cpp
engine/renderer/: CMakeLists.txt
engine/renderer/include/: batch_renderer.h  buffer.h  frame_buffer.h  line_renderer.h  march_renderer.h  perspective_camera.h  renderer_api.h  texture.h
engine/renderer/platform/opengl/: CMakeLists.txt
engine/renderer/platform/opengl/include/: opengl_buffer.h  opengl_context.h  opengl_renderer_api.h  opengl_texture.h
engine/renderer/platform/opengl/src/: opengl_buffer.cpp  opengl_context_sdl.cpp  opengl_renderer_api.cpp  opengl_texture.cpp  opengl_vertex_array.cpp
engine/renderer/platform/opengl_es/: CMakeLists.txt
engine/renderer/platform/opengl_es/include/: opengl_es_buffer.h  opengl_es_context.h  opengl_es_renderer_api.h  opengl_es_shader.h  opengl_es_texture.h  opengl_es_vertex_array.h
engine/renderer/platform/opengl_es/src/: opengl_es_buffer.cpp  opengl_es_context.cpp  opengl_es_renderer_api.cpp  opengl_es_shader.cpp  opengl_es_texture.cpp  opengl_es_vertex_array.cpp
engine/renderer/src/: batch_renderer.cpp  buffer.cpp  line_renderer.cpp  march_renderer.cpp  orthographic_camera.cpp  perspective_camera.cpp  renderer_api.cpp  texture.cpp
engine/shaders/debug_shader/: opengl.glsl
engine/shaders/march_shader/: opengl.glsl
